--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,12 @@
+@import "settings/reset.css";
+@import "src/scss/settings/fonts";
+@import "src/scss/settings/colors";
+
+
+body {
+  font-family: $font-base;
+}
+
 .App {
   text-align: center;
 }
