Created and styled main section with navigation

--- a/src/scss/settings/_fonts.scss
+++ b/src/scss/settings/_fonts.scss
@@ -1,2 +1,6 @@
 $font-base: 'Open Sans', sans-serif;
 $font-alt: 'Merriweather', serif;
+$font-h1-size: 38px;
+$font-weight-light: 300;
+$font-weight-regular: 500;
+$font-weight-bold: 700;
