--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,43 +5,139 @@
 
 body {
   font-family: $font-base;
+  background-color: $color-white;
 }
 
-.App {
-  text-align: center;
-}
+.main-page-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  color: $color-dark-grey;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+  .main-page-img {
+    width: 43%;
+    height: 100%;
+    background-image: url("../assets/Home-Hero-Image.jpg");
+    background-position: right;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .main-page-text {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 150px;
+    padding: 50px 20px;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+//header
+
+.header {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 30px;
+  align-self: flex-end;
+  padding: 0 40px 0 0;
+
+  &-login-menu {
+    display: flex;
+    gap: 30px;
+    align-self: flex-end;
+  }
+
+  &-navigation {
+    display: flex;
+    gap: 30px;
+    .nav-element {
+    text-decoration: none;
+    padding: 8px;
+    color: $color-dark-grey;
+    cursor: pointer;
+    &:hover {
+      padding: 7px;
+      border: 1px solid $color-dark-grey;
+    }
+    &:active {
+      box-shadow: inset 0 1px 2px $color-dark-grey;
+    }
+    }
+  }
+
+  .btn-header {
+    background-color: transparent;
+    padding: 8px;
+    color: $color-grey;
+    font-size: 13px;
+    border: none;
+    font-family: $font-base;
+    text-decoration: none;
+    &:hover {
+      padding: 7px;
+      border: 1px solid $color-yellow;
+    }
+
+    &:active {
+      box-shadow: inset 0 1px 2px $color-yellow;
+    }
+  }
 }
 
-.App-link {
-  color: #61dafb;
-}
+//start
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.main-page-content {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding: 0 90px 0 10px;
+
+  .main-page-titles {
+    line-height: 55px;
+    padding: 0 0 25px 0;
+    font-size: $font-h1-size;
   }
-  to {
-    transform: rotate(360deg);
+
+  .main-page-decoration {
+    height: 30px;
+    align-self: center;
+    margin: 10px 0 50px 0;
   }
-}
+
+  .main-page-buttons {
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+
+    .btn-content {
+      text-decoration: none;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      font-family: $font-base;
+      padding: 13px 0;
+      background-color: $color-white;
+      font-size: 36px;
+      font-weight: $font-weight-light;
+      width: 50%;
+      color: $color-dark-grey;
+      line-height: 45px;
+      border: 0.75px solid $color-dark-grey;
+      &:hover {
+        transform: scale(0.8)
+      }
+  
+      &:active {
+        box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3);
+      }
+
+      }
+    }
+  }
+
+  //about
+  
