--- a/src/scss/settings/_colors.scss
+++ b/src/scss/settings/_colors.scss
@@ -1,4 +1,5 @@
-$color-white: #F0F1F1;
+$color-white: #FFFFFF;
+$color-grey-white: #F0F1F1;
 $color-brown-yellow: #5E5322;
 $color-yellow: #FAD648;
 $color-grey:#737373;
