Changed gap on main page and installed firebase configuration

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -30,7 +30,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    gap: 150px;
+    gap: 20%;
     padding: 50px 20px;
   }
 }
